# tinyshar

./: .bumpversion.cfg  .gitignore  .travis.yml  README.md  appveyor.yml  requirements-dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
docs/source/: conf.py
src/tinyshar/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_lib.py
