[metadata]
name = tinyshar
author = Kyrylo Shpytsya
author-email = kshpitsa@gmail.com
summary = simple library and utility for creation of shell archives
#description-file = README.rst
#description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/kshpytsya/tinyshar
project_urls =
    Bug Tracker = https://github.com/kshpytsya/tinyshar/issues
    Documentation = https://github.com/kshpytsya/tinyshar
    Source Code = https://github.com/kshpytsya/tinyshar
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution

[entry_points]
console_scripts =
    tinyshar = tinyshar.cli:main
